--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
 	font-family: 'IBM Plex Sans';
 	font-style: normal;
 	font-display: swap;
-	src: url('/assets/fonts/ibm-plex-sans/ibm-plex-sans-Medium.ttf');
+	src: url('/assets/fonts/ibm-plex-sans/ibm-plex-sans-Regular.ttf');
 }
 
 .scroll-resize {
